<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_me"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginVertical="30dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perform_simple_addition"
        android:textSize="13sp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginVertical="30dp"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/num1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_number"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/num2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_second_number"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:onClick="calc"
        android:text="@string/calculate" />

    <LinearLayout
        android:id="@+id/LLColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp"
            android:paddingTop="16dp">
            <CheckBox
                android:id="@+id/redCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"/>
            <CheckBox
                android:id="@+id/greenCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"/>
            <CheckBox
                android:id="@+id/blueCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <Button
            android:id="@+id/changeColorBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"
            android:onClick="changeColor"
            android:text="@string/change_color" />
    </LinearLayout>

</LinearLayout>